--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "bootstrap": "^4.5.3",
+    "mapbox-gl": "^2.0.1",
     "moment": "^2.29.1",
+    "ngx-mapbox-gl": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -35,6 +42,7 @@
     "@types/gapi.auth2": "0.0.52",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mapbox-gl": "^2.0.2",
     "@types/node": "^12.19.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
