--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "sweetalert2": "^10.12.3",
     "bootstrap": "^4.5.3",
     "mapbox-gl": "^2.0.1",
     "moment": "^2.29.1",
