--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/compiler": "~11.0.2",
     "@angular/core": "~11.0.2",
     "@angular/forms": "~11.0.2",
+    "@angular/localize": "~11.0.2",
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
@@ -25,13 +26,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
-    "sweetalert2": "^10.12.3",
     "bootstrap": "^4.5.3",
     "mapbox-gl": "^2.0.1",
     "moment": "^2.29.1",
     "ngx-mapbox-gl": "^4.8.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.12.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
